--- a/III - COVID19-Collecting Corona Virus Proteins from Uniprot Database.ipynb
+++ b/III - COVID19-Collecting Corona Virus Proteins from Uniprot Database.ipynb
@@ -107,26 +107,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DATA.json                            noncomm_use_subset.tar.gz\r\n",
-      "II - COVID19-Citation-Network.ipynb  pmc_custom_license.tar.gz\r\n",
-      "biorxiv_medrxiv.tar.gz               virus-proteins.xlsx\r\n",
-      "comm_use_subset.tar.gz\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "ls data"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -1658,6 +1638,20 @@
    ],
    "source": [
     "df.groupby(\"Virus hosts\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Note: Bringing more detail about how to create data indexing and search of Proteins, Genes etc from COVID19 dataset in the next notebook"
    ]
   },
   {
